--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="button-container"> 
             <button class="task-button"><a href="./pages/task1.html">Task1</a></button>
             <button class="task-button"><a href="./pages/task2.html">Task2</a></button>
-            <button class="task-button"><a href="./pages/task3.html">Task3</a></button>
+            <button class="task-button"><a href="./pages/task3.aspx">Task3</a></button>
             <button class="task-button"><a href="./pages/task4.html">Task4</a></button>
             <button class="task-button"><a href="./pages/task5.html">Task5</a></button>
             <button class="task-button"><a href="./pages/tetris.html">Tetris</a></button>
