--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <button class="task-button"><a href="./pages/task3.aspx">Task3</a></button>
             <button class="task-button"><a href="./pages/task4.html">Task4</a></button>
             <button class="task-button"><a href="./pages/task5.html">Task5</a></button>
+            <button class="task-button"><a href="./pages/task6.html">Task6</a></button>
+            <button class="task-button"><a href="./pages/task7.html">Task7</a></button>
+            <button class="task-button"><a href="./pages/task8.html">Task8</a></button>
+            <button class="task-button"><a href="./pages/task9.html">Task9</a></button>
             <button class="task-button"><a href="./pages/tetris.html">Tetris</a></button>
         </div>
     </div>
